--- a/src/main/resources/templates/cliente_form.html
+++ b/src/main/resources/templates/cliente_form.html
@@ -47,6 +47,14 @@
 					</div>
 				</div>
 
+					<div class="form-group row">
+						<label class="col-sm-4 col-form-label">Email: </label>
+						<div class="col-sm-8">
+							<input type="text" class="form-control" />
+						</div>
+					</div>
+				
+
 				<div class="text-center">
 					<button type="submit" class="btn btn-primary m-2">Criar</button>
 					<button type="button" class="btn btn-secondary m-2" onclick="cancelForm()">Cancelar</button>
@@ -57,7 +65,7 @@
 
 		</form>
 	</div>
-	
+
 	<script type="text/javascript">
 		function cancelForm() {
 			window.location = "[[@{/clientes}]]";
